    David Allsopp, review by David Allsopp, Alain Frisch, Nicolas Ojeda Bar,
    Gabriel Scherer and Damien Doligez)

### Tools:

* #6792, #8654 ocamldebug now supports program using Dynlink. This
   breaks compatibility with emacs modes.
   (Whitequark and Jacques-Henri Jourdan, review by Gabriel Scherer
    and Xavier Clerc)

### Standard library:

- #8832: List.find_map : ('a -> 'b option) -> 'a list -> 'b option
  (Gabriel Scherer, review by Jeremy Yallop, Nicolás Ojeda Bär
   and Daniel Bünzli)

- #8657: Optimization in [Array.make] when initializing with unboxed
   or young values.
   (Jacques-Henri Jourdan, review by Gabriel Scherer and Stephen Dolan)

- #8634: Statistical memory profiling provided by the Gc.Memprof
   module.
   Incomplete version: does not sample objects allocated in the minor
   heap in native mode
   (Jacques-Henri Jourdan, review by Stephen Dolan, Gabriel Scherer and
    Damien Doligez)

- #7672, #1492: Add `Filename.quote_command` to produce properly-quoted
  commands for execution by Sys.command.
  (Xavier Leroy, review by David Allsopp and Damien Doligez)

- #8716: Optimize [Array.fill] and [Hashtbl.clear] with a new runtime primitive
  (Alain Frisch, review by David Allsopp, Stephen Dolan and Damien Doligez)

- #8530: List.sort: avoid duplicate work by chop
  (Guillaume Munch-Maccagnoni, review by David Allsopp, Damien Doligez and
   Gabriel Scherer)

### Other libraries:

- #1939, #2023: Implement Unix.truncate and Unix.ftruncate on Windows.
  (Florent Monnier and Nicolás Ojeda Bär, review by David Allsopp)

### Manual and documentation:

- #8950: manual, move local opens in pattern out of the extension chapter
  (Florian Angeletti, review and suggestion by Gabriel Scherer)


### Compiler user-interface and warnings:

- #8833: Hint for (type) redefinitions in toplevel session
  (Florian Angeletti, review by Gabriel Scherer)

- #2127: Refactor lookup functions
  Included observable changes: